--- a/TutorialsPoint.csproj
+++ b/TutorialsPoint.csproj
@@ -3,6 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+  
+  <DefaultItemExcludes>wwwroot/global/**;$(DefaultItemExcludes)</DefaultItemExcludes> 
+  <DefaultItemExcludes>wwwroot/vendors/**;$(DefaultItemExcludes)</DefaultItemExcludes> 
+  
+
   </PropertyGroup>
 
 </Project>
+
