--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.1/TutorialsPoint.dll",
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.2/CSharpLang-git.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
